--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,46 @@ reports/
 .mypy_cache/
 .ruff_cache/
 .coverage
+
+# Terraform
+infra/.terraform/
+infra/.terraform.lock.hcl
+infra/terraform.tfstate
+infra/terraform.tfstate.*
+infra/crash.log
+infra/*.tfvars
+infra/*.tfvars.json
+
+# Terraform plan files
+infra/*.out
+infra/*.plan
+
+# Override files
+infra/override.tf
+infra/override.tf.json
+infra/*_override.tf
+infra/*_override.tf.json
+# Azure Functions local
+local.settings.json
+.azurefunctions/
+
+# Python
+__pycache__/
+*.pyc
+.venv/
+venv/
+.env
+
+# Terraform
+**/.terraform/
+**/*.tfstate
+**/*.tfstate.*
+**/terraform.tfstate.d/
+**/.terraform.lock.hcl.backup
+crash.log
+*.tfvars
+*.tfvars.json
+
+# Build artifacts
+function.zip
+package/
