--- a/src/function_app/requirements.functions.txt
+++ b/src/function_app/requirements.functions.txt
@@ -3,3 +3,4 @@ azure-identity>=1.16.0
 azure-mgmt-resourcegraph>=8.0.0
 azure-mgmt-subscription>=3.1.1
 azure-storage-blob>=12.20.0
+cryptography==41.0.7
